update thời gian tour

--- a/src/components/layouts/tour-detail/_general.pug
+++ b/src/components/layouts/tour-detail/_general.pug
@@ -1,5 +1,6 @@
 .tourDetail__general
 	h1 Christina’s - Hotel & Cafe
+	p 2 Days 3 Nights
 	.tourDetail__generalDetail
 		.tourDetail__generalRating
 			span.fas.fa-star
