--- a/src/scss/components/_tour-detail.scss
+++ b/src/scss/components/_tour-detail.scss
@@ -696,13 +696,19 @@
 .tourDetail__general {
 	h1 {
 		font-size: 3rem;
-		margin-bottom: 10px;
+		margin-bottom: 5px;
 		@media (max-width: 1199.98px) {
 			font-size: 2.6rem;
 		}
 		@media (max-width: 767.98px) {
 			font-size: 2.2rem;
 		}
+	}
+	p{
+		font-size: 1.8rem;
+		margin-bottom: 15px;
+		font-weight: 700;
+		color: map-get($color, main);
 	}
 }
 .tourDetail__generalDetail {
